--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>April Cohort Javascript Class</h1>
+    <h1 class="h1">April Cohort Javascript Class</h1>
     <script src="/javascript/script.js"></script>
   </body>
 </html>
