--- a/array.html
+++ b/array.html
@@ -7,6 +7,8 @@
   </head>
   <body>
     <h1>DATA STRUCTURE (ARRAYS)</h1>
+    <h1>DATA STRUCTURE (ARRAYS)</h1>
+    <h1>DATA STRUCTURE (ARRAYS)</h1>
     <script src="javascript/array.js"></script>
   </body>
 </html>
