--- a/events.html
+++ b/events.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Events</title>
+    <link rel="stylesheet" href="css/events.css" />
     <!-- <script defer src="javascript/events.js"></script> -->
   </head>
   <body>
+    <button class="btnDark">Click me</button>
     <h1 class="dom">DOM MANIPULATION</h1>
     <!-- First child-->
 
@@ -58,6 +60,21 @@
     <!-- <section>
         <h4 >This ia a h4 element created by javascript</h4>
     </section> -->
+    <p
+      onclick="console.log('hello world')"
+      class="newp-class newp-class2"
+      id="pclass"
+    >
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum eveniet
+      officiis atque voluptatem incidunt itaque praesentium corrupti fugiat
+      excepturi! Placeat incidunt mollitia assumenda sequi error aperiam
+      pariatur esse natus earum.
+    </p>
+    <div class="events">
+      <p>This is inside the div with the class of events</p>
+      <h2>Another do something</h2>
+      <input type="text" placeholder="enter text"  />
+    </div>
     <script src="javascript/events.js"></script>
   </body>
 </html>
